--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,5 +1,8 @@
 {
   "compilerOptions": {
+    "baseUrl": "./",
+    "checkJs": true,
+    "jsx": "react-jsx",
     "paths": {
       "@/*": ["./*"]
     }
