--- a/package.json
+++ b/package.json
@@ -15,12 +15,22 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "autoprefixer": "10.4.16",
     "just-shuffle": "^4.2.0",
+    "marked": "^10.0.0",
     "next": "13.5.2",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
-    "tailwindcss": "3.3.3"
+    "react-markdown": "^9.0.1",
+    "rehype-slug": "^6.0.0",
+    "remark": "^15.0.1",
+    "remark-comment-config": "^8.0.0",
+    "remark-gfm": "^4.0.0",
+    "remark-remove-comments": "^1.0.1",
+    "remark-slug": "^7.0.1",
+    "remark-toc": "^9.0.0",
+    "tailwindcss": "3.3.3",
+    "to-vfile": "^8.0.0"
   },
   "devDependencies": {
     "eslint": "^8.49.0",
